...
            label = "Calculation",
            helperText = "How much is 1002.52 + 1.212?",
            decimalPrecision = 3,
            showGroupSeparators = true,
            onValueChange = { value = it }
        )
        Input("Click here to take over focus", "Focus")
    }
}

@Preview(showBackground = true)
@Composable
fun DecimalPreviewWithNoGrouping() {
...
